force-app/main/default/objects/Account/fields/c2g__CODAVATStatus__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAVATStatus__c</fullName>
    <label>Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
                <default>true</default>
                <label>Home</label>
            </value>
            <value>
                <fullName>EC Registered</fullName>
            </value>
            <value>
                <fullName>EC Non-registered</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>