force-app/main/default/objects/Account/fields/c2g__CollectionsOnHold__c.field-meta.xml
<CustomField>
    <fullName>c2g__CollectionsOnHold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collections On Hold</label>
    <type>Checkbox</type>
</CustomField>