force-app/main/default/objects/Account/fields/Can_CR_increase_rates_on_notice__c.field-meta.xml
<CustomField>
    <fullName>Can_CR_increase_rates_on_notice__c</fullName>
    <label>Can CR increase rates on notice?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>