force-app/main/default/objects/Account/fields/Can_we_charge_for_travel_time__c.field-meta.xml
<CustomField>
    <fullName>Can_we_charge_for_travel_time__c</fullName>
    <label>Can we charge for travel time?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>