force-app/main/default/objects/Account/fields/Case_Sensitive_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Sensitive_ID__c</fullName>
    <description>This is the 18 character case sensitive ID for Accounts.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Sensitive ID</label>
    <type>Text</type>
</CustomField>