force-app/main/default/objects/Account/fields/CC_EchoSign_to__c.field-meta.xml
<CustomField>
    <fullName>CC_EchoSign_to__c</fullName>
    <description>Who is to be CC&apos;d into the request for EchoSigning?</description>
    <inlineHelpText>Who is to be CC&apos;d into the request for EchoSigning?</inlineHelpText>
    <label>CC EchoSign to</label>
    <type>TextArea</type>
</CustomField>