force-app/main/default/objects/Account/fields/CEL_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>CEL_Sponsor__c</fullName>
    <label>CEL Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alex Rhea</fullName>
            </value>
            <value>
                <fullName>Angelos Efthimiou</fullName>
            </value>
            <value>
                <fullName>Chris Halvorson</fullName>
            </value>
            <value>
                <fullName>Christian Metzger</fullName>
            </value>
            <value>
                <fullName>Christian Nillsson</fullName>
            </value>
            <value>
                <fullName>Clark Whiteway</fullName>
            </value>
            <value>
                <fullName>Daniel Smythe</fullName>
            </value>
            <value>
                <fullName>Guillermo Fisher</fullName>
            </value>
            <value>
                <fullName>Iain Edwards</fullName>
            </value>
            <value>
                <fullName>Jon Lanyon</fullName>
            </value>
            <value>
                <fullName>Linda Nichols</fullName>
            </value>
            <value>
                <fullName>Mark Seddon</fullName>
            </value>
            <value>
                <fullName>Nicola Salvo</fullName>
            </value>
            <value>
                <fullName>Robert Sternberg</fullName>
            </value>
            <value>
                <fullName>Tony Bennett</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>