force-app/main/default/objects/Account/fields/Citizenship_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Requirements__c</fullName>
    <inlineHelpText>e.g. personnel must be US citizen</inlineHelpText>
    <label>Are there citizenship requirements?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>