force-app/main/default/objects/Account/fields/Cloudreach_Entity__c.field-meta.xml
<CustomField>
    <fullName>Cloudreach_Entity__c</fullName>
    <description>//May be replaced at a later date with a field populated from a process//</description>
    <label>Cloudreach Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloudreach B.V.</fullName>
            </value>
            <value>
                <fullName>Cloudreach Canada Inc</fullName>
            </value>
            <value>
                <fullName>Cloudreach Europe Limited</fullName>
            </value>
            <value>
                <fullName>Cloudreach GmbH</fullName>
            </value>
            <value>
                <fullName>Cloudreach Inc</fullName>
            </value>
            <value>
                <fullName>Cloudreach SAS</fullName>
            </value>
            <value>
                <fullName>Cloudreach Switzerland GmbH</fullName>
            </value>
            <value>
                <fullName>Cloudamize Inc</fullName>
            </value>
            <value>
                <fullName>Relus Acquisition LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>