force-app/main/default/objects/Account/fields/Cloudreach_Products__c.field-meta.xml
<CustomField>
    <fullName>Cloudreach_Products__c</fullName>
    <description>A list of products that the customer consumes with Cloudreach</description>
    <inlineHelpText>A list of products that the customer consumes with Cloudreach</inlineHelpText>
    <label>Cloudreach Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIS</fullName>
            </value>
            <value>
                <fullName>Cloud Enablement</fullName>
            </value>
            <value>
                <fullName>Core Operations</fullName>
            </value>
            <value>
                <fullName>Cost Control</fullName>
            </value>
            <value>
                <fullName>Managed Application</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>ITSM Integration</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>