force-app/main/default/objects/Account/fields/Cloudreach_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Cloudreach_Vertical__c</fullName>
    <label>Cloudreach Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Architecture, Construction &amp; Engineering</fullName>
            </value>
            <value>
                <fullName>Banking and Securities</fullName>
            </value>
            <value>
                <fullName>Business and Professional Services</fullName>
            </value>
            <value>
                <fullName>Consumer Business and Retail</fullName>
            </value>
            <value>
                <fullName>Education and Non-Profits</fullName>
            </value>
            <value>
                <fullName>Energy and Resources</fullName>
            </value>
            <value>
                <fullName>Health Care &amp; Pharma</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Manufacturing &amp; Agriculture</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
                <default>true</default>
                <label>Not Specified</label>
            </value>
            <value>
                <fullName>Public sector</fullName>
            </value>
            <value>
                <fullName>Shipping, Transportation and Logistics</fullName>
            </value>
            <value>
                <fullName>Technology and Telecommunications</fullName>
            </value>
            <value>
                <fullName>Travel, Media and Hospitality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>