force-app/main/default/objects/Account/fields/Contact_for_EchoSigning__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_EchoSigning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the signatory at the customer?</description>
    <inlineHelpText>Who is the signatory at the customer?</inlineHelpText>
    <label>Contact for EchoSigning</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.ParentId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contact for EchoSigning)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>