force-app/main/default/objects/Account/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>What Cloudreach contract term the customer in on.</description>
    <inlineHelpText>What Cloudreach contract term the customer in on.</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
            <value>
                <fullName>2.1</fullName>
            </value>
            <value>
                <fullName>2.2</fullName>
            </value>
            <value>
                <fullName>2.5</fullName>
            </value>
            <value>
                <fullName>2.6</fullName>
            </value>
            <value>
                <fullName>Agile Ops</fullName>
            </value>
            <value>
                <fullName>EDP</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Relus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>