force-app/main/default/objects/Account/fields/CR_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>CR_Active_Status__c</fullName>
    <label>CR Active Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Active_Status</valueSetName>
    </valueSet>
</CustomField>