force-app/main/default/objects/Account/fields/CR_Entity__c.field-meta.xml
<CustomField>
    <fullName>CR_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CR Entity</label>
    <referenceTo>fferpcore__Company__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>