force-app/main/default/objects/Account/fields/Created_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Created_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Supplier</label>
    <type>Checkbox</type>
</CustomField>