force-app/main/default/objects/Account/fields/Credit_Limit_Currency__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Currency__c</fullName>
    <label>Credit Limit Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>