force-app/main/default/objects/Account/fields/Customer_Onboarded__c.field-meta.xml
<CustomField>
    <fullName>Customer_Onboarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Onboarding Complete?</label>
    <type>Checkbox</type>
</CustomField>