force-app/main/default/objects/Account/fields/Customer_Order_Form_Template_required__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_Form_Template_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Order Form Template required?</label>
    <type>Checkbox</type>
</CustomField>