force-app/main/default/objects/Account/fields/Customer_Order_Form_Template_Required_fo__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_Form_Template_Required_fo__c</fullName>
    <formula>IF(ISNULL( Framework_Agreement_Contract__c ),false, Framework_Agreement_Contract__r.Customer_Order_Form_Template_required__c )</formula>
    <label>Customer Order Form Template Required?</label>
    <type>Checkbox</type>
</CustomField>