force-app/main/default/objects/Account/fields/Customer_used_PO_terms_previously__c.field-meta.xml
<CustomField>
    <fullName>Customer_used_PO_terms_previously__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically checked if customer has used PO terms previously</description>
    <inlineHelpText>Automatically checked if customer has used PO terms previously</inlineHelpText>
    <label>Customer used PO terms previously</label>
    <type>Checkbox</type>
</CustomField>