force-app/main/default/objects/Account/fields/D_B_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>D_B_Validation_Status__c</fullName>
    <defaultValue>&quot;Not Validated&quot;</defaultValue>
    <label>D&amp;B Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Not Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>