force-app/main/default/objects/Account/fields/Delinquency_Score_Description__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Score_Description__c</fullName>
    <label>Delinquency Score Description</label>
    <type>TextArea</type>
</CustomField>