force-app/main/default/objects/Account/fields/Delinquency_Score_National_Percentile__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Score_National_Percentile__c</fullName>
    <label>Delinquency Score National Percentile</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>