force-app/main/default/objects/Account/fields/Delivery_Partner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Partner</label>
    <type>Checkbox</type>
</CustomField>