force-app/main/default/objects/Account/fields/Detailed_Source__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Source__c</fullName>
    <description>Use to track leads entered through websites</description>
    <label>Detailed Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>G-Cloud</fullName>
            </value>
            <value>
                <fullName>Cloudlock</fullName>
            </value>
            <value>
                <fullName>Cloudfinder</fullName>
            </value>
            <value>
                <fullName>L-Tech</fullName>
            </value>
            <value>
                <fullName>Avalon</fullName>
            </value>
            <value>
                <fullName>Eircom</fullName>
            </value>
            <value>
                <fullName>Web Inquiry</fullName>
            </value>
            <value>
                <fullName>OggChat</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Public Event</fullName>
            </value>
            <value>
                <fullName>Vendor Event</fullName>
            </value>
            <value>
                <fullName>Cloudreach Event</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Linkedin Data</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>