force-app/main/default/objects/Account/fields/DNB_Data_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>DNB_Data_Monitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D&amp;B Data Monitoring</label>
    <type>Checkbox</type>
</CustomField>