force-app/main/default/objects/Account/fields/Does_a_Customer_expense_policy_apply__c.field-meta.xml
<CustomField>
    <fullName>Does_a_Customer_expense_policy_apply__c</fullName>
    <label>Does a Customer expense policy apply?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>