force-app/main/default/objects/Account/fields/Does_CR_need_specific_insurance__c.field-meta.xml
<CustomField>
    <fullName>Does_CR_need_specific_insurance__c</fullName>
    <label>Does CR need specific insurance?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>