force-app/main/default/objects/Account/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>This is the companies domain name, possibly extracted from their email or website</description>
    <label>Domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>