force-app/main/default/objects/Account/fields/Domestic_Ultimate_Locality__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Locality__c</fullName>
    <label>Domestic Ultimate: Locality</label>
    <type>TextArea</type>
</CustomField>