force-app/main/default/objects/Account/fields/Domestic_Ultimate_Name__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Name__c</fullName>
    <label>Domestic Ultimate: Name</label>
    <type>TextArea</type>
</CustomField>