force-app/main/default/objects/Account/fields/Domestic_Ultimate_Region__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Region__c</fullName>
    <label>Domestic Ultimate: Region</label>
    <type>TextArea</type>
</CustomField>