force-app/main/default/objects/Account/fields/Domestic_Ultimate_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Region_Code__c</fullName>
    <label>Domestic Ultimate: Region Code</label>
    <type>TextArea</type>
</CustomField>