force-app/main/default/objects/Account/fields/Drug_Test_Required__c.field-meta.xml
<CustomField>
    <fullName>Drug_Test_Required__c</fullName>
    <label>Is a drug test required?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>