force-app/main/default/objects/Account/fields/DSCORGPKG__Conflict__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Conflict__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conflict</label>
    <referenceTo>DSCORGPKG__Conflict__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>