force-app/main/default/objects/Account/fields/DSCORGPKG__DiscoverOrg_First_Update__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__DiscoverOrg_First_Update__c</fullName>
    <label>DiscoverOrg First Update</label>
    <type>DateTime</type>
</CustomField>