force-app/main/default/objects/Account/fields/DSCORGPKG__DiscoverOrg_Technologies__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__DiscoverOrg_Technologies__c</fullName>
    <label>DiscoverOrg Technologies</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>