force-app/main/default/objects/Account/fields/DSCORGPKG__Fortune_Rank__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Fortune_Rank__c</fullName>
    <label>Fortune Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>