force-app/main/default/objects/Account/fields/DSCORGPKG__SIC_Codes__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__SIC_Codes__c</fullName>
    <label>Primary SIC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>