force-app/main/default/objects/Account/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <externalId>true</externalId>
    <label>DUNS Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>