force-app/main/default/objects/Account/fields/EchoSign_Cancelled_Declined__c.field-meta.xml
<CustomField>
    <fullName>EchoSign_Cancelled_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EchoSign Cancelled / Declined</label>
    <type>Checkbox</type>
</CustomField>