force-app/main/default/objects/Account/fields/EchoSign_out_for_signature__c.field-meta.xml
<CustomField>
    <fullName>EchoSign_out_for_signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EchoSign out for signature</label>
    <type>Checkbox</type>
</CustomField>