force-app/main/default/objects/Account/fields/Entity_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type_Description__c</fullName>
    <label>Entity Type Description</label>
    <type>TextArea</type>
</CustomField>