force-app/main/default/objects/Account/fields/Escalation_State__c.field-meta.xml
<CustomField>
    <fullName>Escalation_State__c</fullName>
    <description>Current state of the customer relationship.</description>
    <inlineHelpText>Current state of the customer relationship.</inlineHelpText>
    <label>Escalation State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High - Escalation</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>