force-app/main/default/objects/Account/fields/Estimated_AWS_ARR__c.field-meta.xml
<CustomField>
    <fullName>Estimated_AWS_ARR__c</fullName>
    <description>Estimated AWS Annual recurring revenue</description>
    <inlineHelpText>Estimated AWS Annual recurring revenue</inlineHelpText>
    <label>Estimated AWS ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>