force-app/main/default/objects/Account/fields/Existing_hosting_platform__c.field-meta.xml
<CustomField>
    <fullName>Existing_hosting_platform__c</fullName>
    <label>Existing hosting platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AWS User</fullName>
            </value>
            <value>
                <fullName>Microsoft Azure</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>